# rez

./: Cargo.toml  image.ppm
src/: camera.rs  collider.rs  colour.rs  encode.rs  lib.rs  main.rs  material.rs  ray.rs  raytracer.rs  vec3.rs
