[package]
name = "rez"
version = "0.1.0"
authors = ["Eli Treuherz <eli@treuherz.co.uk>"]
edition = "2018"

[dependencies]
itertools = "0.10"
lazy_static = "1.4"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.5"

[dependencies.indicatif]
git = "https://github.com/mitsuhiko/indicatif"
branch = "main"
features = ["improved_unicode", "rayon"]
